--- a/shopping-app-backend/shopapp/pom.xml
+++ b/shopping-app-backend/shopapp/pom.xml
@@ -45,7 +45,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts-core</artifactId>
+            <version>1.3.8</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
