--- a/shopping-app-backend/shopapp/src/main/resources/application.yml
+++ b/shopping-app-backend/shopapp/src/main/resources/application.yml
@@ -2,6 +2,21 @@ server:
   port: 8088
 
 spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/shopapp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=True
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: root
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: none
+    properties:
+      hibernate:
+        format_sql: true
+
+
   servlet:
     multipart:
       max-file-size: 10MB
