--- a/shopping-app-backend/shopapp/src/main/resources/application.yml
+++ b/shopping-app-backend/shopapp/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/shopapp?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=True
+    url: jdbc:mysql://localhost:3306/shop_app_test?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=True
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: root
@@ -11,7 +11,7 @@ spring:
   jpa:
     show-sql: true
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
     properties:
       hibernate:
         format_sql: true
