--- a/shopping-app-backend/shopapp/src/main/resources/application.yml
+++ b/shopping-app-backend/shopapp/src/main/resources/application.yml
@@ -22,7 +22,9 @@ spring:
       max-file-size: 10MB
       max-request-size: 15MB
 
-fileName: uploads
+files:
+  destination: uploads
+  maximun-file: 5
 
 api:
   prefix: api/v1
