--- a/shopping-app-backend/shopapp/pom.xml
+++ b/shopping-app-backend/shopapp/pom.xml
@@ -28,6 +28,32 @@
 			<version>3.1.1</version>
 		</dependency>
 
+
+		<!--		<dependency>-->
+		<!--			<groupId>org.yaml</groupId>-->
+		<!--			<artifactId>snakeyaml</artifactId>-->
+		<!--			<version>1.28</version>-->
+		<!--		</dependency>-->
+
+		<dependency>
+			<groupId>com.github.javafaker</groupId>
+			<artifactId>javafaker</artifactId>
+			<version>1.0.2</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.yaml</groupId>
+					<artifactId>snakeyaml</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.plugin</groupId>
+			<artifactId>spring-plugin-core</artifactId>
+			<version>2.0.0.RELEASE</version>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
